# PECLocalFwk

./: .gitignore  CMakeLists.txt  Makefile  Makefile.inc  README.md  _config.yml  env.sh  index.md  test-page.md
_includes/: footer.html
_layouts/: main-page.html
cmake/: mensuraConfig.cmake
core/include/: AnalysisPlugin.hpp  BTagDatabase.hpp  BTagEffInterface.hpp  BTagSFInterface.hpp  BTagger.hpp  Dataset.hpp  DatasetForward.hpp  EventID.hpp  EventSelectionInterface.hpp  FileInPath.hpp  GenParticle.hpp  JetCorrectorInterface.hpp  Logger.hpp  PECReader.hpp  PECReaderConfig.hpp  PECReaderConfigForward.hpp  PECReaderForward.hpp  PECReaderPlugin.hpp  PhysicsObjects.hpp  Plugin.hpp  PluginForward.hpp  Processor.hpp  ProcessorForward.hpp  ROOTLock.hpp  ReaderPlugin.hpp  RunManager.hpp  RunManagerForward.hpp  Service.hpp  SystDefinition.hpp  TriggerRange.hpp  TriggerSelectionInterface.hpp  WeightBTag.hpp  WeightBTagInterface.hpp  WeightPileUpInterface.hpp
core/src/: AnalysisPlugin.cpp  BTagDatabase.cpp  BTagEffInterface.cpp  BTagSFInterface.cpp  BTagger.cpp  Dataset.cpp  EventSelectionInterface.cpp  FileInPath.cpp  GenParticle.cpp  JetCorrectorInterface.cpp  Logger.cpp  PECReader.cpp  PECReaderConfig.cpp  PECReaderPlugin.cpp  PhysicsObjects.cpp  Plugin.cpp  Processor.cpp  ROOTLock.cpp  ReaderPlugin.cpp  RunManager.cpp  Service.cpp  SystDefinition.cpp  TriggerRange.cpp  TriggerSelectionInterface.cpp  WeightBTag.cpp  WeightBTagInterface.cpp  WeightPileUpInterface.cpp
data/: README.md
data/BTag/: BTagEff_2012Bravo_v1.0.root  BTagEff_74X_v1.0.root  BTagEff_76X_v1.root  BTagEff_80Xv1.root  BTagEff_80Xv2.root  BTagEff_80Xv3.root  BTagSF_cMVAv2_80Xv2_BtoF.csv  BTagSF_cMVAv2_80Xv2_GtoH.csv  BTagWP_80Xv1.json  BTagWP_80Xv2.json  CSVWeights_74X_v1.0.root  eff_CSVM.root  eff_CSVT.root
data/LeptonSF/: ElectronSF_2015D_76Xv1.root  ElectronSF_2015D_76Xv2.root  ElectronSF_2016BCD_80Xv1.root  ElectronSF_2016BCD_80Xv2.root  ElectronSF_2016_80Xv1.root  ElectronSF_2016_80Xv1_BtoF.root  ElectronSF_2016_80Xv1_GtoH.root  ElectronSF_2016_80Xv2.root  ElectronSF_2016_80Xv2_BtoF.root  ElectronSF_2016_80Xv2_GtoH.root  ElectronScaleFactors_2012_53X.root  MuonSF_2015D_76Xv1.root  MuonSF_2016BCD_80Xv1.root  MuonSF_2016BCD_80Xv2.root  MuonSF_2016_80Xv1.root  MuonSF_2016_80Xv1_BtoF.root  MuonSF_2016_80Xv1_GtoH.root  MuonSF_2016_80Xv2.root  MuonSF_2016_80Xv2_BtoF.root  MuonSF_2016_80Xv2_GtoH.root  MuonScaleFactors_2012_53X.root
data/PileUp/: Run2015D_SingleElectron_v1.0_finebin.root  Run2015D_SingleElectron_v2_finebin.root  Run2015D_SingleElectron_v3_finebin.root  Run2015D_SingleMuon_v1.0_finebin.root  Run2015D_SingleMuon_v2_finebin.root  Run2016BCD_SingleElectron_v1_finebin.root  Run2016BCD_SingleMuon_v1_finebin.root  Run2016_SingleElectron_v1_finebin.root  Run2016_SingleMuon_v1_finebin.root  Run2016_unprescaled_v1_finebin.root  SingleMu2012ABCD_Alpha-v2_pixelLumi.pileupTruth_finebin.root  SingleMu2012ABCD_Bravo_v1.0_pixelLumi.pileupTruth_finebin.root  simPUProfiles_76X.root  simPUProfiles_80X.root  simPUProfiles_80Xv2.root
doxygen/: Doxyfile
doxygen/html/: _analysis_plugin_8hpp.html  _analysis_plugin_8hpp_source.html  _b_tag_calibration_8hpp_source.html  _b_tag_calibration_reader_8hpp_source.html  _b_tag_eff_histograms_8hpp_source.html  _b_tag_eff_service_8hpp_source.html  _b_tag_entry_8hpp_source.html  _b_tag_s_f_service_8hpp_source.html  _b_tag_w_p_service_8hpp_source.html  _b_tag_weight_8hpp_source.html  _b_tag_weight_c_s_v_shape_8hpp_source.html  _b_tagger_8hpp_source.html  _basic_kinematics_plugin_8hpp_source.html  _calculate_pz_nu_8hpp.html  _calculate_pz_nu_8hpp_source.html  _candidate_8hpp_source.html  _candidate_with_i_d_8hpp_source.html  _dataset_8hpp_source.html  _dataset_builder_8hpp_source.html  _electron_8hpp_source.html  _event_counter_8hpp.html  _event_counter_8hpp_source.html  _event_i_d_filter_8hpp_source.html  _event_i_d_reader_8hpp_source.html  _event_i_d_reminder_filter_8hpp_source.html  _event_weight_plugin_8hpp_source.html  _factorized_jet_corrector_8hpp_source.html  _file_in_path_8hpp_source.html  _gen_jet_8hpp_source.html  _gen_jet_m_e_t_reader_8hpp_source.html  _gen_particle_reader_8hpp_source.html  _gen_weight_syst_8hpp_source.html  _generator_info_8hpp_source.html  _generator_reader_8hpp_source.html  _jet_8hpp_source.html  _jet_correction_uncertainty_8hpp_source.html  _jet_corrector_parameters_8hpp_source.html  _jet_corrector_service_8hpp_source.html  _jet_filter_8hpp_source.html  _jet_functor_filter_8hpp_source.html  (+428 more)
extensions/include/: BTagEfficiencies.hpp  BTagScaleFactors.hpp  BTaggerPlugin.hpp  BasicKinematicsPlugin.hpp  EventCounter.hpp  EventWeightPlugin.hpp  FilterEventIDPlugin.hpp  FilterEventIDReminderPlugin.hpp  GenericEventSelection.hpp  JetCorrector.hpp  JetFilterPlugin.hpp  JetPtFilterPlugin.hpp  JetResolutionFactor.hpp  LeptonScaleFactorPlugin.hpp  MetFilterPlugin.hpp  SingleTopTChanPlugin.hpp  StdBTaggerPlugin.hpp  (+3 more)
scripts/: build_sample_database.py  compute_sample_norm.py
src/: AnalysisPlugin.cpp  BTagEffHistograms.cpp  BTagSFService.cpp  BTagWPService.cpp  BTagWeight.cpp  BTagWeightCSVShape.cpp  BasicKinematicsPlugin.cpp  Config.cpp  Dataset.cpp  DatasetBuilder.cpp  DatasetSelector.cpp  EventCounter.cpp  EventID.cpp  EventIDFilter.cpp  EventIDReader.cpp  EventIDReminderFilter.cpp  EventWeightPlugin.cpp  FileInPath.cpp  GenParticleReader.cpp  GenWeightSyst.cpp  GeneratorReader.cpp  JetCorrectorService.cpp  JetFilter.cpp  JetFunctorFilter.cpp  JetResolution.cpp  LeptonReader.cpp  MetFilter.cpp  PileUpReader.cpp  PileUpWeight.cpp  Plugin.cpp  Processor.cpp  RunManager.cpp  Service.cpp  SystService.cpp  TFileService.cpp  WeightCollector.cpp
test/: .gitignore  CMakeLists.txt  Makefile  btag-efficiencies.cpp  btag-scale-factors.cpp  jet-corrections.cpp  jet-met-recorrection.cpp  jet-met-systematics.cpp  lepton-scale-factors.cpp  minimal.cpp  multithread.cpp  ttbar.root
test/src/: btag-efficiencies.cpp  btag-scale-factors.cpp  jet-corrections.cpp  jet-met-recorrection.cpp  jet-met-systematics.cpp  lepton-scale-factors.cpp  minimal.cpp  multithread.cpp
(+480 files in other folders)
